# flutter_universal_ble_server

./: LICENSE  README.md  pubspec.yaml
.github/: FUNDING.yml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
ios/: flutter_universal_ble_server.podspec  universal_ble_server.podspec
lib/: flutter_universal_ble_server.dart  flutter_universal_ble_server_method_channel.dart  flutter_universal_ble_server_platform_interface.dart  flutter_universal_ble_server_web.dart  universal_ble_server.dart  universal_ble_server_impl.dart  universal_ble_server_method_channel.dart  universal_ble_server_platform_interface.dart  universal_ble_server_web.dart
linux/: CMakeLists.txt  flutter_universal_ble_server_plugin.cc  flutter_universal_ble_server_plugin_private.h
macos/: flutter_universal_ble_server.podspec  universal_ble_server.podspec
test/: encryption_test.dart  flutter_universal_ble_server_method_channel_test.dart  flutter_universal_ble_server_test.dart
web/: universal_ble_server_web.dart
windows/: CMakeLists.txt  flutter_universal_ble_server_plugin.cpp  flutter_universal_ble_server_plugin.h  flutter_universal_ble_server_plugin_c_api.cpp  universal_ble_server_plugin.cpp  universal_ble_server_plugin.h  universal_ble_server_plugin_c_api.cpp
windows/include/flutter_universal_ble_server/: flutter_universal_ble_server_plugin_c_api.h
windows/include/universal_ble_server/: universal_ble_server_plugin.h  universal_ble_server_plugin_c_api.h
windows/test/: flutter_universal_ble_server_plugin_test.cpp  universal_ble_server_plugin_test.cpp
(+38 files in other folders)
